<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/recyclerview_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dp"
    android:background="@drawable/custom_border"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/diff"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/allpins_recyclerview_item_title"
                style="@style/pin_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/pin_title"
                android:textAlignment="viewStart"
                android:textColor="#3A3A3A"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/pin_coordinates"
                style="@style/pin_coord"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/pin_coordinates"
                android:textAlignment="viewStart"
                android:textColor="#8B8B8B"
                android:textSize="14sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/type_image"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_margin="2dp"
            android:layout_weight="5"
            android:contentDescription="@string/pin_type_image_descripition"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_symbol_text" />

        <com.mikhaellopez.circleview.CircleView
            android:id="@+id/diff"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="5dp"
            app:cv_border="false"
            app:cv_color="#3f51b5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:clickable="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/type_image"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_sprite_complete"
            android:contentDescription="@string/allpins_checkmark_description" />

    </androidx.constraintlayout.widget.ConstraintLayout>
  
</LinearLayout>